--- a/Train_Notebook/CircularFingerprint_RF.ipynb
+++ b/Train_Notebook/CircularFingerprint_RF.ipynb
@@ -248,8 +248,8 @@
     },
     {
      "data": {
-      "text/plain": [
-       "0.6438979305448003"
+      "text": [
+       "R2 using sklearn: 0.6438979305448003"
       ]
      },
      "execution_count": 14,
@@ -261,10 +261,11 @@
     "y_pred = rf.predict(X_test)\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)"
     "\n",
     "print(\"MAE using sklearn:\", mae)\n",
     "print(\"MSE using sklearn:\", mse)\n",
-    "r2_score(y_test,y_pred)"
+    "print(\"R2 using sklearn:\", r2)"
    ]
   }
  ],
