--- a/Train_Notebook/CircularFingerprint_RF.ipynb
+++ b/Train_Notebook/CircularFingerprint_RF.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,34 +243,26 @@
      "output_type": "stream",
      "text": [
       "MAE using sklearn: 1.3072102038432354\n",
-      "MSE using sklearn: 3.2731601938274713\n"
+      "MSE using sklearn: 3.2731601938274713\n",
+      "R2 using sklearn: 0.6438979305448003\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.6438979305448003"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "y_pred = rf.predict(X_test)\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test,y_pred)\n",
     "\n",
     "print(\"MAE using sklearn:\", mae)\n",
     "print(\"MSE using sklearn:\", mse)\n",
-    "r2_score(y_test,y_pred)"
+    "print(\"R2 using sklearn:\", r2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -284,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
